--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "typeface-roboto": "^1.1.13"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.23",
+    "@types/react": "^18.0.1",
+    "typescript": "^4.6.3"
   }
 }
